<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/linearLayoutAsteriks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp">
            <TextView
                android:id="@+id/textAsteriks1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textSize="25sp"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/textAsteriks2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textSize="25sp"
                android:layout_marginTop="25dp"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soyad"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextAd"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/ad_hint"
                android:textSize="25sp"/>


            <EditText
                android:id="@+id/editTextSoyad"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/soyad_hint"
                android:textSize="25sp"/>
        </LinearLayout>



    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGrupMedeni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textAsteriks3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textSize="25sp"
            android:visibility="gone"/>

        <RadioButton
            android:id="@+id/radioEvli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evli"
            android:textSize="25sp"/>
        <RadioButton
            android:id="@+id/radioBekar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bekar"
            android:textSize="25sp"/>
    </RadioGroup>

    <Switch
        android:id="@+id/switchHobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobi"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textAsteriks4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            />
        <GridLayout
            android:id="@+id/gridHobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:rowCount="2"
            android:columnCount="2">

            <CheckBox
                android:id="@+id/checkboxSpor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spor"
                android:textSize="25sp"
                android:enabled="false"/>

            <CheckBox
                android:id="@+id/checkboxDans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dans"
                android:textSize="25sp"
                android:enabled="false"/>

            <CheckBox
                android:id="@+id/checkboxMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/müzik"
                android:textSize="25sp"
                android:enabled="false"/>
            <CheckBox
                android:id="@+id/checkboxSinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sinema"
                android:textSize="25sp"
                android:enabled="false"/>
        </GridLayout>
    </LinearLayout>


    <Button
        android:id="@+id/buttonYazdir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="?attr/colorButtonNormal"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/yazdır"/>
    <TextView
        android:id="@+id/textGöster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>



</LinearLayout>